Add user functionality to the repository

--- a/ProjectSolution/TestConsole/TestConsole.csproj
+++ b/ProjectSolution/TestConsole/TestConsole.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data.Connection\Data.Connection.csproj" />
+    <ProjectReference Include="..\Data.Services\Data.Services.csproj" />
   </ItemGroup>
 
 </Project>
