Change GetUserOrders method to give more info

--- a/ProjectSolution/API/API.csproj
+++ b/ProjectSolution/API/API.csproj
@@ -8,14 +8,12 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AmazonWareHouse.Business\AmazonWareHouse.Business.csproj" />
     <ProjectReference Include="..\Data.Connection\Data.Connection.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 
