--- a/ProjectSolution/AmazonWareHouse.Business/AmazonWareHouse.Business.csproj
+++ b/ProjectSolution/AmazonWareHouse.Business/AmazonWareHouse.Business.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\OrdersItems\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data.Models\Data.Models.csproj" />
+    <ProjectReference Include="..\Data.Services\Data.Services.csproj" />
   </ItemGroup>
 
 </Project>
